--- a/notes-milewski-ctfp-hs.cabal
+++ b/notes-milewski-ctfp-hs.cabal
@@ -17,7 +17,10 @@ library
   hs-source-dirs:      src
   exposed-modules:     CTNotes.P1Ch07_Functors_Composition
                      , CTNotes.P1Ch10_NaturalTransformations
+                     , CTNotes.P2Ch01a_LimitsColimitsExtas
   build-depends:       base >= 4.7 && < 5
+                     -- , category-extras
+                     , comonad
   default-language:    Haskell2010
 
 executable notes-milewski-ctfp-hs
