--- a/notes-milewski-ctfp-hs.cabal
+++ b/notes-milewski-ctfp-hs.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     CTNotes.P1Ch07_Functors_Composition
                      , CTNotes.P1Ch10_NaturalTransformations
                      , CTNotes.P2Ch01a_LimitsColimitsExtas
+                     , CTNotes.P2Ch01b_Continuity
   build-depends:       base >= 4.7 && < 5
                      -- , category-extras
                      , comonad
