--- a/notes-milewski-ctfp-hs.cabal
+++ b/notes-milewski-ctfp-hs.cabal
@@ -16,10 +16,12 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     CTNotes.P1Ch03a_NatsCat
+                     , CTNotes.P1Ch03b_FiniteCats
                      , CTNotes.P1Ch07_Functors_Composition
                      , CTNotes.P1Ch10_NaturalTransformations
                      , CTNotes.P2Ch02a_LimitsColimitsExtras
                      , CTNotes.P2Ch02b_Continuity
+                     , CTNotes.P2Ch02c_Equalizer
                      , CTNotes.P2Ch03_FreeMonoidFoldMap
   build-depends:       base >= 4.7 && < 5
                      -- , category-extras
