--- a/notes-milewski-ctfp-hs.cabal
+++ b/notes-milewski-ctfp-hs.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     CTNotes.P1Ch03a_NatsCat
                      , CTNotes.P1Ch03b_FiniteCats
                      , CTNotes.P1Ch07_Functors_Composition
+                     , CTNotes.P1Ch07b_Functors_AcrossCats
                      , CTNotes.P1Ch10_NaturalTransformations
                      , CTNotes.P2Ch02a_LimitsColimitsExtras
                      , CTNotes.P2Ch02b_Continuity
