--- a/notes-milewski-ctfp-hs.cabal
+++ b/notes-milewski-ctfp-hs.cabal
@@ -26,6 +26,7 @@ library
                      , CTNotes.P2Ch02c_Equalizer
                      , CTNotes.P2Ch03_FreeMonoidFoldMap
                      , CTNotes.P2Ch05a_YonedaAndMap
+                     , CTNotes.P2Ch05b_YonedaNonHask
   build-depends:       base >= 4.7 && < 5
                      -- , category-extras
                      , comonad
