--- a/notes-milewski-ctfp-hs.cabal
+++ b/notes-milewski-ctfp-hs.cabal
@@ -21,6 +21,7 @@ library
                      , CTNotes.P1Ch07_Functors_Composition
                      , CTNotes.P1Ch07b_Functors_AcrossCats
                      , CTNotes.P1Ch10_NaturalTransformations
+                     , CTNotes.P1Ch10b_NTsNonHask
                      , CTNotes.P2Ch02a_LimitsColimitsExtras
                      , CTNotes.P2Ch02b_Continuity
                      , CTNotes.P2Ch02c_Equalizer
