Initial work on monads in finite categories

--- a/notes-milewski-ctfp-hs.cabal
+++ b/notes-milewski-ctfp-hs.cabal
@@ -33,6 +33,8 @@ library
                      , CTNotes.P3Ch02a_CurryAdj
                      , CTNotes.P3Ch02b_AdjNonHask
                      , CTNotes.P3Ch02c_AdjProps
+                     , CTNotes.P3Ch06a_CTMonads
+                     , CTNotes.P3Ch06b_FiniteMonads
                      , Trivialities.NTProps
   build-depends:       base >= 4.7 && < 5
                      -- , category-extras
