Comonad work Clarification in CTMMonads on distributive laws Small documentation changes

--- a/notes-milewski-ctfp-hs.cabal
+++ b/notes-milewski-ctfp-hs.cabal
@@ -36,6 +36,7 @@ library
                      , CTNotes.P3Ch06a_CTMonads
                      , CTNotes.P3Ch06b_FiniteMonads
                      , CTNotes.P3Ch07a_GameOfLife
+                     , CTNotes.P3Ch07b_Comonad
                      , Trivialities.NTProps
                      , Utils.Pretty
                      , Utils.Stream
