Squashed commit of Enriched categories branch

--- a/notes-milewski-ctfp-hs.cabal
+++ b/notes-milewski-ctfp-hs.cabal
@@ -42,6 +42,8 @@ library
                      , CTNotes.P3Ch08a_Falg
                      , CTNotes.P3Ch09b_AlgebraAndFree
                      , CTNotes.P3Ch11a_KanExt
+                     , CTNotes.P3Ch12a_HaskEnrich
+                     , CTNotes.P3Ch12b_EnrichedPreorder
                      , Trivialities.NTProps
                      , Utils.Pretty
                      , Utils.Stream
