--- a/notes-milewski-ctfp-hs.cabal
+++ b/notes-milewski-ctfp-hs.cabal
@@ -15,7 +15,8 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     CTNotes.P1Ch03a_NatsCat
+  exposed-modules:     CTNotes.Introduction
+                     , CTNotes.P1Ch03a_NatsCat
                      , CTNotes.P1Ch03b_FiniteCats
                      , CTNotes.P1Ch03c_DiscreteCats
                      , CTNotes.P1Ch07_Functors_Composition
